test/spec_vectors/simd_lane/fail/module_79.wat
(module (func (result f64) (f64x2.extract_lane 0 (f64.const 0.0))))